[~] update navbar to be a little more responsive

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,15 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Lille Judo{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-        <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" ></script>
         <style>
             html,
             body {
@@ -25,32 +22,26 @@
             .footer {
                 background: lightgray;
             }
-            .navbar .navbar-nav {
-                display: inline-block;
-                float: none;
-                vertical-align: top;
-            }
-            .navbar .navbar-collapse {
-                text-align: center;
-            }
         </style>
     </head>
     <body class="d-flex flex-column">
         <div class="flex-grow-1 flex-shrink-0">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="{{ path('accueil') }}"><img src="{{ asset('assets/luc_logo.png') }}" alt="logo"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <nav class="navbar navbar-expand-lg navbar-light text-center">
+                <a class="navbar-brand" href="{{ path('accueil') }}"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
+                <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
                             <a class="nav-link" style="color: black; background: white" href="{{ path('accueil') }}">
                                 Accueil
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" style="color: black; background: yellow" id="navbarClubMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: yellow" id="navbarClubMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Club
                             </a>
                             <div class="dropdown-menu" style="background: yellow" aria-labelledby="navbarClubMenuLink">
@@ -62,7 +53,8 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" style="color: black; background: orange" id="navbarDisciplinesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: orange" id="navbarDisciplinesMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Disciplines
                             </a>
                             <div class="dropdown-menu" style="background: orange" aria-labelledby="navbarDisciplinesMenuLink">
@@ -73,7 +65,8 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" style="color: black; background: #489343" id="navbarInscriptionMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: #489343" id="navbarInscriptionMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Inscription
                             </a>
                             <div class="dropdown-menu" style="background: #489343" aria-labelledby="navbarInscriptionMenuLink">
@@ -82,7 +75,8 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" style="color: black; background: #0B70C0" id="navbarActualitesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: #0B70C0" id="navbarActualitesMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Actualités
                             </a>
                             <div class="dropdown-menu" style="background: #0B70C0" aria-labelledby="navbarActualitesMenuLink">
