--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -13,18 +13,26 @@
         <div class="row">
             {% for post in posts %}
                 <div class="col-lg-4">
-                    <svg class="bd-placeholder-img rounded-circle"
-                         width="140"
-                         height="140"
-                         xmlns="http://www.w3.org/2000/svg"
-                         preserveAspectRatio="xMidYMid slice"
-                         focusable="false"
-                         role="img"
-                         aria-label="Placeholder: 140x140">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777"/>
-                        <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-                    </svg>
+                    {% if post.image %}
+                        <img class="bd-placeholder-img rounded-circle"
+                             width="140"
+                             height="140"
+                             role="img"
+                             aria-label="Placeholder: 140x140"
+                             src="{{ asset('uploads/post/') }}{{ post.image }}" alt="">
+                    {% else %}
+                        <svg class="bd-placeholder-img rounded-circle"
+                             width="140"
+                             height="140"
+                             xmlns="http://www.w3.org/2000/svg"
+                             preserveAspectRatio="xMidYMid slice"
+                             focusable="false"
+                             role="img"
+                             aria-label="Placeholder: 140x140">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#777"/>
+                        </svg>
+                    {% endif %}
                     <h2>{{ post.title }}</h2>
                     <p>{{ post.body }}</p>
                     <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
@@ -42,7 +50,25 @@
                 {% for post in posts %}
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                            {% if post.image %}
+                                <img class="bd-placeholder-img card-img-top"
+                                     width="100%"
+                                     height="225"
+                                     src="{{ asset('uploads/post/') }}{{ post.image }}" alt="">
+                            {% else %}
+                                <svg class="bd-placeholder-img card-img-top"
+                                     width="100%"
+                                     height="225"
+                                     xmlns="http://www.w3.org/2000/svg"
+                                     preserveAspectRatio="xMidYMid slice"
+                                     focusable="false"
+                                     role="img"
+                                     aria-label="Placeholder: Thumbnail">
+                                    <title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#55595c"/>
+                                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                                </svg>
+                            {% endif %}
                             <div class="card-body">
                                 <h2>{{ post.title }}</h2>
                                 <p class="card-text">{{ post.body }}</p>
