[~] open inscription judo in a new window

--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -124,7 +124,7 @@
             </div>
             <div id="adhésion" class="tab-pane fade">
                 <h3>Inscription</h3>
-                <a href="{{ path('downloadJudoInscription') }}">Fiche d'inscription</a>
+                <a href="{{ path('downloadJudoInscription') }}" target="_blank">Fiche d'inscription</a>
             </div>
         </div>
     </div>
