--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -35,7 +35,7 @@
                     {% endif %}
                     <h2>{{ post.title }}</h2>
                     <p>{{ post.body }}</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-secondary" href="{{ path('newsletter_show', {'id': post.id}) }}" role="button">View details &raquo;</a></p>
                 </div>
             {% else %}
                 <div class="col-lg-4">
@@ -74,7 +74,7 @@
                                 <p class="card-text">{{ post.body }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        <a href="{{ path('newsletter_show', {'id': post.id}) }}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
                                     </div>
                                 </div>
                             </div>
