--- a/templates/actualites/newsletter.html.twig
+++ b/templates/actualites/newsletter.html.twig
@@ -7,13 +7,30 @@
         {% for post in posts %}
             <div class="row featurette">
                 <div class="col-md-3">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 250x250"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">250x250</text></svg>
+                    {% if post.image %}
+                        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+                             width="250"
+                             height="250"
+                             src="{{ asset('uploads/post/') }}{{ post.image }}" alt="">
+                    {% else %}
+                        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+                             width="250"
+                             height="250"
+                             xmlns="http://www.w3.org/2000/svg"
+                             preserveAspectRatio="xMidYMid slice"
+                             focusable="false"
+                             role="img"
+                             aria-label="Placeholder: 250x250">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#eee"/>
+                            <text x="50%" y="50%" fill="#aaa" dy=".3em">250x250</text>
+                        </svg>
+                    {% endif%}
                 </div>
                 <div class="col-md-7">
                     <h2 class="featurette-heading">{{ post.title }}</h2>
                     <p class="lead">{{ post.body }}</p>
                 </div>
-{#                <a href="#">Voir l'article</a>#}
                 <a href="{{ path('newsletter_show', {'id': post.id}) }}">Voir l'article</a>
             </div>
             <hr class="featurette-divider">
