[+] post for actualites natio/inter - fixtures for this - admin for this - uploader for this - templates for this

--- a/templates/actualites/actualites-club.html.twig
+++ b/templates/actualites/actualites-club.html.twig
@@ -11,7 +11,7 @@
                         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
                              width="250"
                              height="250"
-                             src="{{ asset('uploads/post/') }}{{ post.image }}" alt="">
+                             src="{{ asset('uploads/club/') }}{{ post.image }}" alt="">
                     {% else %}
                         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
                              width="250"
