--- a/templates/actualites/actualites-nationale-internationale-show.html.twig
+++ b/templates/actualites/actualites-nationale-internationale-show.html.twig
@@ -17,7 +17,7 @@
             </tr>
             </tbody>
         </table>
-        <a href="{{ path('actualites-club') }}">back to list</a>
+        <a href="{{ path('actualites-nationale-internationale') }}">back to list</a>
     </div>
 {% endblock %}
 
