--- a/templates/club/histoire.html.twig
+++ b/templates/club/histoire.html.twig
@@ -356,7 +356,7 @@
                 </div>
             </div>
             <div id="enseignement" class="tab-pane fade">
-                <h3 class="text-center">L'enseignement</h3>
+                <h3>L'enseignement</h3>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="main-timeline">
