[~] change bootstrap version - update all files needed

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -4,8 +4,7 @@
 
 {% block body %}
     <div class="text-center" style="background-image: url('https://dummyimage.com/1000x800/a80202/ffffff')">
-        <h1 class="display-1" style="color: black">
-            LUC JUDO<br/>
+        <h1 class="display-3" style="color: black">LUC JUDO<br/>
             <small class="text-white">Judo - Ju-Jitsu - Ne Waza - Taiso</small>
         </h1>
     </div>
