--- a/templates/disciplines/ju-jitsu.html.twig
+++ b/templates/disciplines/ju-jitsu.html.twig
@@ -4,20 +4,26 @@
 
 {% block body %}
     <div class="container">
-        <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#histoireValeurs">Histoire et Valeurs</a></li>
-            <li><a data-toggle="tab" href="#cours">Cours</a></li>
-            <li><a data-toggle="tab" href="#adhésion">Adhésion</a></li>
+        <ul class="nav nav-tabs" id="jujitsuTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="histoireValeurs-tab" data-toggle="tab" href="#histoireValeurs" aria-controls="histoireValeurs" aria-selected="true">Histoire et Valeurs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="cours-tab" data-toggle="tab" href="#cours" aria-controls="cours" aria-selected="false">Cours</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="adhésion-tab" data-toggle="tab" href="#adhésion" aria-controls="adhésion" aria-selected="false">Adhésion</a>
+            </li>
         </ul>
-        <div class="tab-content">
-            <div id="histoireValeurs" class="tab-pane fade in active">
+        <div class="tab-content" id="jujitsuTabContent">
+            <div class="tab-pane fade show active" id="histoireValeurs" role="tabpanel" aria-labelledby="histoireValeurs-tab">
                 <h3>Histoire et Valeurs</h3>
             </div>
-            <div id="cours" class="tab-pane fade">
+            <div class="tab-pane fade" id="cours" role="tabpanel" aria-labelledby="cours-tab">
                 <h3>Cours</h3>
             </div>
-            <div id="adhésion" class="tab-pane fade">
-                <h3>Adhésion</h3>
+            <div class="tab-pane fade" id="adhésion" role="tabpanel" aria-labelledby="adhésion-tab">
+                <h3>Inscription</h3>
             </div>
         </div>
     </div>
