--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -4,13 +4,19 @@
 
 {% block body %}
     <div class="container">
-        <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#histoireValeurs">Histoire et Valeurs</a></li>
-            <li><a data-toggle="tab" href="#cours">Cours</a></li>
-            <li><a data-toggle="tab" href="#adhésion">Adhésion</a></li>
+        <ul class="nav nav-tabs" id="judoTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="histoireValeurs-tab" data-toggle="tab" href="#histoireValeurs" aria-controls="histoireValeurs" aria-selected="true">Histoire et Valeurs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="cours-tab" data-toggle="tab" href="#cours" aria-controls="cours" aria-selected="false">Cours</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="adhésion-tab" data-toggle="tab" href="#adhésion" aria-controls="adhésion" aria-selected="false">Adhésion</a>
+            </li>
         </ul>
-        <div class="tab-content">
-            <div id="histoireValeurs" class="tab-pane fade in active">
+        <div class="tab-content" id="judoTabContent">
+            <div class="tab-pane fade show active" id="histoireValeurs" role="tabpanel" aria-labelledby="histoireValeurs-tab">
                 <h3>Histoire du Judo</h3>
                 <figure class="figure float-left">
                     <img src="{{ asset('assets/jigoro_kano.jpg') }}" class="figure-img img-fluid" alt="Jigoro Kano">
@@ -73,7 +79,7 @@
                     Le « SHIN », cité en premier, donne seul le sens aux deux autres.
                 </p>
             </div>
-            <div id="cours" class="tab-pane fade">
+            <div class="tab-pane fade" id="cours" role="tabpanel" aria-labelledby="cours-tab">
                 <div class="row">
                     <div class="col">
                         <h3 class="text-center">SALLE DEBEYRE</h3>
@@ -122,7 +128,7 @@
                     </div>
                 </div>
             </div>
-            <div id="adhésion" class="tab-pane fade">
+            <div class="tab-pane fade" id="adhésion" role="tabpanel" aria-labelledby="adhésion-tab">
                 <h3>Inscription</h3>
                 <a href="{{ path('downloadJudoInscription') }}" target="_blank">Fiche d'inscription</a>
             </div>
