[+] professeurs entity - updateeasyadmin, subscriber, ...

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="text-center" style="background-image: url('https://dummyimage.com/1000x800/a80202/ffffff')">
         <h1 class="display-3" style="color: black">LUC JUDO<br/>
-            <small class="text-white">Judo - Ju-Jitsu - Ne Waza - Taiso</small>
+            <small class="text-white">Judo - Ju Jitsu - Ne Waza - Taiso</small>
         </h1>
     </div>
     <div class="container">
@@ -87,6 +87,25 @@
             </div>
         </div>
     </div>
+{#    <div>#}
+{#        <div class="embed-responsive embed-responsive-4by3">#}
+{#            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.75805227567!2d3.071911315859676!3d50.63161128217546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d58cd174730f%3A0xf0f98712dd300f10!2sSports%20de%20contact%20Lille%20Etudiants%20Club!5e0!3m2!1sfr!2sfr!4v1594216294738!5m2!1sfr!2sfr"#}
+{#                    class="embed-responsive-item"#}
+{#                    width="400"#}
+{#                    height="400"#}
+{#                    allowfullscreen>#}
+{#            </iframe>#}
+{#        </div>#}
+{#        <div class="embed-responsive embed-responsive-4by3">#}
+{#            <iframe#}
+{#                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10123.531260071102!2d3.0872175!3d50.6292937!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xaa09394f92c9509f!2sComplexe%20sportif%20Auguste%20Defaucompret!5e0!3m2!1sfr!2sfr!4v1594217549823!5m2!1sfr!2sfr"#}
+{#                    class="embed-responsive-item"#}
+{#                    width="400"#}
+{#                    height="400"#}
+{#                    allowfullscreen>#}
+{#            </iframe>#}
+{#        </div>#}
+{#    </div>#}
     <div class="text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.75805227567!2d3.071911315859676!3d50.63161128217546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d58cd174730f%3A0xf0f98712dd300f10!2sSports%20de%20contact%20Lille%20Etudiants%20Club!5e0!3m2!1sfr!2sfr!4v1594216294738!5m2!1sfr!2sfr"
                 frameborder="0"
