--- a/templates/club/bureau.html.twig
+++ b/templates/club/bureau.html.twig
@@ -20,5 +20,53 @@
                 </li>
             </ul>
         </div>
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-3">
+                    <img class="rounded-circle"
+                         src="http://placehold.it/140x140"
+                         width="140"
+                         height="140"
+                         alt="">
+                    <h2>Président</h2>
+                    <p>
+                        BONTE Thomas
+                    </p>
+                </div>
+                <div class="col-lg-3">
+                    <img class="rounded-circle"
+                         src="http://placehold.it/140x140"
+                         width="140"
+                         height="140"
+                         alt="">
+                    <h2>Trésorier</h2>
+                    <p>
+                        PAPEGAY Benoit
+                    </p>
+                </div>
+                <div class="col-lg-3">
+                    <img class="rounded-circle"
+                         src="http://placehold.it/140x140"
+                         width="140"
+                         height="140"
+                         alt="">
+                    <h2>Secrétaire</h2>
+                    <p>
+                        LECLERCQ Marie
+                    </p>
+                </div>
+                <div class="col-lg-3">
+                    <img class="rounded-circle"
+                         src="http://placehold.it/140x140"
+                         width="140"
+                         height="140"
+                         alt="">
+                    <h2>Secrétaire Adjointe</h2>
+                    <p>
+                        MAQUERRE Béatrice
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
