--- a/templates/club/enseignants.html.twig
+++ b/templates/club/enseignants.html.twig
@@ -17,6 +17,43 @@
                 </li>
             </ul>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <img class="rounded-circle"
+                         src="http://placehold.it/140x140"
+                         width="140"
+                         height="140"
+                         alt="">
+                    <h2>Directeur Technique Compétitions Adultes</h2>
+                    <p>
+                        BONTE Thomas, 2ème Dan, DE
+                    </p>
+                </div>
+                <div class="col-lg-4">
+                    <img class="rounded-circle"
+                         src="http://placehold.it/140x140"
+                         width="140"
+                         height="140"
+                         alt="">
+                    <h2>Directeur Technique Enseignement et Pédagogie</h2>
+                    <p>
+                        MAZURIER Alexandre, 2ème Dan, DE
+                    </p>
+                </div>
+                <div class="col-lg-4">
+                    <img class="rounded-circle"
+                         src="http://placehold.it/140x140"
+                         width="140"
+                         height="140"
+                         alt="">
+                    <h2>Directeur Technique Ne-Waza</h2>
+                    <p>
+                        PFANZELT Helmut, 4ème Dan, CQP
+                    </p>
+                </div>
+            </div>
+        </div>
         <h2 class="text-center">Professeurs</h2>
         <div class="container">
             <ul class="list-group list-group-flush text-center">
@@ -42,21 +79,39 @@
                         no records found
                     </li>
                 {% endfor %}
-{#                <li class="list-group-item">#}
-{#                    DEPRY Pacôme, 2ème Dan, BE 1#}
-{#                </li>#}
-{#                <li class="list-group-item">#}
-{#                    LABIAUX Lydéric, 2ème Dan, CQP#}
-{#                </li>#}
-{#                <li class="list-group-item">#}
-{#                    SOENNE Philippe, 2ème Dan, BE 1#}
-{#                </li>#}
-{#                <li class="list-group-item">#}
-{#                    DELAUNAY Raphael, 2ème Dan, BE 1#}
-{#                </li>#}
-{#                <li class="list-group-item">#}
-{#                    LABIAUX Chloé, 2ème Dan, CQP#}
-{#                </li>#}
+                <div class="row">
+                    {% for professeur in professeurs %}
+                        <div class="col-lg-4">
+                            {% if professeur.image %}
+                                <img class="rounded-circle"
+                                     src="{{ asset('uploads/professeurs/') }}{{ professeur.image }}"
+                                     width="140"
+                                     height="140"
+                                     alt="">
+                            {% else %}
+                                <img class="rounded-circle"
+                                     src="http://placehold.it/140x140"
+                                     width="140"
+                                     height="140"
+                                     alt="">
+                            {% endif %}
+                            <p>
+                                {{ professeur.text }}
+                            </p>
+                        </div>
+                    {% else %}
+                        <div class="col-lg-4">
+                            <img class="rounded-circle"
+                                 src="http://placehold.it/140x140"
+                                 width="140"
+                                 height="140"
+                                 alt="">
+                            <p>
+                                no records found
+                            </p>
+                        </div>
+                    {% endfor %}
+                </div>
             </ul>
         </div>
     </div>
