--- a/templates/club/enseignants.html.twig
+++ b/templates/club/enseignants.html.twig
@@ -18,7 +18,7 @@
             </ul>
         </div>
         <div class="container">
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-lg-4">
                     <img class="rounded-circle"
                          src="http://placehold.it/140x140"
@@ -79,7 +79,7 @@
                         no records found
                     </li>
                 {% endfor %}
-                <div class="row">
+                <div class="row justify-content-center">
                     {% for professeur in professeurs %}
                         <div class="col-lg-4">
                             {% if professeur.image %}
