[+] template for contact

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -170,7 +170,9 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center py-3">© 2020 Copyright:
+            <div class="text-center py-3">
+                <a href="#">Mentions légales et crédits</a><br/>
+                © 2020 Copyright:
                 <a href="https://mathiastop.eu"> Mathias Top</a>
             </div>
         </footer>
