--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <div class="text-center py-3">
-                <a href="#">Mentions légales et crédits</a><br/>
+                <a href="{{ path('mentionslegales') }}">Mentions légales et crédits</a><br/>
                 © 2020 Copyright:
                 <a href="https://mathiastop.eu"> Mathias Top</a>
             </div>
