--- a/templates/mentionslegales/index.html.twig
+++ b/templates/mentionslegales/index.html.twig
@@ -7,7 +7,7 @@
         <div class="row" style="margin-top: 50px;margin-bottom: 50px;">
             <div class="grid_12">
                 <h2>Crédits</h2>
-                <p>Déveoloppement: <a href="http://mathiastop.eu/"> Mathias Top</a></p>
+                <p>Développement: <a href="http://mathiastop.eu/"> Mathias Top</a></p>
                 <p>Responsable publication: Mathias Top</p>
                 <h2>Informations légales</h2>
                 <h3>1. Présentation du site.</h3>
