[~] update mentions legales

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -172,8 +172,7 @@
             </div>
             <div class="text-center py-3">
                 <a href="{{ path('mentionslegales') }}">Mentions légales et crédits</a><br/>
-                © 2020 Copyright:
-                <a href="https://mathiastop.eu"> Mathias Top</a>
+                © 2020 Copyright: <a href="{{ path('mentionslegales') }}">LUC Judo</a>
             </div>
         </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
