[~] update mentions legales

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -3,6 +3,13 @@
 {% block title %}Acceuil - Lille Judo{% endblock %}
 
 {% block body %}
+{#    TODO: Remove this div before true launching#}
+    <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+        <strong>Attention!</strong> Ce site est encore en construction.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
     <div class="text-center" style="background-image: url('https://dummyimage.com/1000x800/a80202/ffffff')">
         <h1 class="display-3" style="color: black">LUC JUDO<br/>
             <small class="text-white">Judo - Ju Jitsu - Ne Waza - Taiso</small>
