--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -16,7 +16,7 @@
         </h1>
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row text-center">
             {% for post in posts %}
                 <div class="col-lg-4">
                     {% if post.image %}
