--- a/templates/mentionslegales/index.html.twig
+++ b/templates/mentionslegales/index.html.twig
@@ -12,7 +12,7 @@
                 <h2>Informations légales</h2>
                 <h3>1. Présentation du site.</h3>
                 <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site <a href="http://www.lillejudo.fr/">www.lillejudo.fr</a> l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :</p>
-                <p><strong>Propriétaire</strong> : LUC Judo – Association 000 000 000 00000 – Adresse 59800 Lille<br />
+                <p><strong>Propriétaire</strong> : LUC Judo – Association 77 56 24 37 20 0022 – 29 avenue Boufflers 59130 Lambersart<br />
                     <strong>Créateur</strong>  : <a href="http://mathiastop.eu/">Mathias Top</a><br />
                     <strong>Responsable publication</strong> : Mathias Top – mathias.top@epitech.eu<br />
                     Le responsable publication est une personne physique ou une personne morale.<br />
